add example util func

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,14 +18,17 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of lmww is to ...
+The goal of lmww is to support thinking of linear models in terms of factor
+weights, instead of factor absolute coefficients. This means better interpretation
+of the model drivers, which helps in creating confidence in the model.
 
 ## Installation
 
 You can install the development version of lmww like so:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+# install.packages("devtools")
+devtools::install_github("0xdomyz/lmww")
 ```
 
 ## Example
@@ -35,20 +38,12 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(lmww)
 ## basic example code
+purrr::map(mtcars, std) |> dplyr::bind_cols()
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
+Embeded plots:
 
 ```{r pressure, echo = FALSE}
 plot(pressure)
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
